SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/SOV_Continuation_Sheet_Lines__c.object-meta.xml
<CustomObject>
    <label>Continuation Sheet  - G703</label>
    <nameField>
        <label>Continuation Sheet Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuation Sheets - G703</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>