SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Balance_To_Finish__c.field-meta.xml
<CustomField>
    <fullName>Balance_To_Finish__c</fullName>
    <formula>Scheduled_Value__c -  Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance To Finish</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>