SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Balance_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Balance_to_Pay__c</fullName>
    <formula>Work_Completed__c  -   New_Retainage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance to Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>