SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Budget_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Budget_Grouping__c</fullName>
    <label>Budget Grouping</label>
    <length>228</length>
    <type>Text</type>
</CustomField>