SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Change_Order_Payment_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Payment_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Order Payment Tracking</label>
    <referenceTo>BT_Change_Order_Payment_Tracking__c</referenceTo>
    <relationshipName>Continuation_Sheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>