SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/G_C__c.field-meta.xml
<CustomField>
    <fullName>G_C__c</fullName>
    <formula>(Total__c /  Scheduled_Value__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% (G/C) (Not Used In Layout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>