SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Grouping2__c.field-meta.xml
<CustomField>
    <fullName>Grouping2__c</fullName>
    <label>Grouping2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section A</fullName>
            </value>
            <value>
                <fullName>Section B</fullName>
            </value>
            <value>
                <fullName>Section C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>