SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Floor</fullName>
            </value>
            <value>
                <fullName>2nd Floor</fullName>
            </value>
            <value>
                <fullName>3rd Floor</fullName>
            </value>
            <value>
                <fullName>Change Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>