SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <formula>(  Work_Completed__c  +  Material_Presently_Stored__c ) * (1- SOV_Continuation_Sheet__r.SOV_Payment_Application__r.Retainage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>