SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Invoice_Line_AP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line (AP)</label>
    <referenceTo>Account_Payable_Item_Clone__c</referenceTo>
    <relationshipLabel>Continuation Sheets - G703</relationshipLabel>
    <relationshipName>Continuation_Sheets_G703</relationshipName>
    <type>Lookup</type>
</CustomField>