SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Is_Created_In_This_App__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_In_This_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created In This App</label>
    <type>Checkbox</type>
</CustomField>