SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item #</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>