SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Item_No__c.field-meta.xml
<CustomField>
    <fullName>Item_No__c</fullName>
    <label>Item No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>