SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/less10_hold_back__c.field-meta.xml
<CustomField>
    <fullName>less10_hold_back__c</fullName>
    <formula>(Work_Completed__c  * 10) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>less10% hold back</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>