SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Material_Stored_From_Previous_App__c.field-meta.xml
<CustomField>
    <fullName>Material_Stored_From_Previous_App__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Material Stored From Previous App</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>