SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/New_Retainage__c.field-meta.xml
<CustomField>
    <fullName>New_Retainage__c</fullName>
    <formula>(Total__c	) *  SOV_Continuation_Sheet__r.SOV_Payment_Application__r.Retainage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>