SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/New_Vendor_Retainage__c.field-meta.xml
<CustomField>
    <fullName>New_Vendor_Retainage__c</fullName>
    <formula>((Vendor_Work_Completed_from_Previous_Appl__c+Vendor_Work_Completed_This_Period__c + Vendor_Material_Presently_Stored__c) / 100) * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>