SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/NewVendor_G_C__c.field-meta.xml
<CustomField>
    <fullName>NewVendor_G_C__c</fullName>
    <formula>(Vendor_Total__c / Scheduled_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% (G/C)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>