SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Old_Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Tracking_Id__c</fullName>
    <label>Old Tracking Id</label>
    <length>125</length>
    <type>Text</type>
</CustomField>