SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Payment_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Application_Id__c</fullName>
    <formula>SOV_Continuation_Sheet__r.SOV_Payment_Application__c</formula>
    <label>Payment Application Id</label>
    <type>Text</type>
</CustomField>