SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/percent1__c.field-meta.xml
<CustomField>
    <fullName>percent1__c</fullName>
    <formula>(Work_Completed_from_Previous_Application__c  /  Scheduled_Value__c )  * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>percent1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>