SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/percent2__c.field-meta.xml
<CustomField>
    <fullName>percent2__c</fullName>
    <formula>(Total__c  /  Scheduled_Value__c )  * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>percent2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>