SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/percent3__c.field-meta.xml
<CustomField>
    <fullName>percent3__c</fullName>
    <formula>(Work_Completed__c  /  Scheduled_Value__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>percent3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>