SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Retainage__c.field-meta.xml
<CustomField>
    <fullName>Retainage__c</fullName>
    <formula>((Work_Completed_from_Previous_Application__c+Work_Completed__c) /  100) * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainage (Not Used In Layout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>