SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Scheduled_Value__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scheduled Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>