SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Sheet_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Item_No__c</fullName>
    <label>Item No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>