SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/SOV_Continuation_Sheet__c.field-meta.xml
<CustomField>
    <fullName>SOV_Continuation_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Continuation Sheet</label>
    <referenceTo>SOV_Continuation__c</referenceTo>
    <relationshipName>SOV_Continuation_Sheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>