SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Material_Presently_Stored__c +  Work_Completed_from_Previous_Application__c +  Work_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Completed and Stored To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>