SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Continuation_Sheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>