SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_G_C__c.field-meta.xml
<CustomField>
    <fullName>Vendor_G_C__c</fullName>
    <formula>(Vendor_Total__c / Scheduled_Value__c)*100</formula>
    <label>% (G/C) (Not Used In Layout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>