SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_Material_Presently_Stored__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Material_Presently_Stored__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Material Presently Stored</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>