SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_Retainage__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Retainage__c</fullName>
    <formula>((Vendor_Work_Completed_from_Previous_Appl__c+Vendor_Work_Completed_This_Period__c) / 100) * 10</formula>
    <label>Retainage (Not Used In Layout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>