SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_Sheet_line_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Sheet_line_Id__c</fullName>
    <label>Vendor Sheet line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>