SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_SOV_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SOV_Line_Id__c</fullName>
    <label>Vendor SOV Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>