SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_Total__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Total__c</fullName>
    <formula>Vendor_Material_Presently_Stored__c + Vendor_Work_Completed_from_Previous_Appl__c + Vendor_Work_Completed_This_Period__c</formula>
    <label>Total Completed and Stored To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>