SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_Work_Completed_from_Previous_Appl__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Work_Completed_from_Previous_Appl__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Work Completed from Previous Application</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>