SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Vendor_Work_Completed_This_Period__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Work_Completed_This_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Work Completed This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>