SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Work Completed This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>