SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/fields/Work_Completed_from_Previous_Application__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_from_Previous_Application__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Work Completed from Previous Application</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>