SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/validationRules/Prevent_Update_when_vendor_submitted_PA.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update_when_vendor_submitted_PA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
OR(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Vendor Submitted&quot;),ISPICKVAL(PRIORVALUE(Status__c) , &quot;Accepted&quot;),
AND(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Vendor Submitted&quot;),(ISCHANGED( Status__c ))))
)</errorConditionFormula>
    <errorMessage>You cannot edit the record, once the status is vendor Submitted or Company Accepted</errorMessage>
</ValidationRule>