SubBt/force-app/main/default/objects/SOV_Continuation_Sheet_Lines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOV_Continuation_Sheet__c</columns>
    <columns>Work_Completed__c</columns>
    <columns>Material_Presently_Stored__c</columns>
    <columns>Invoice_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SOV_Continuation_Sheet__c</field>
        <operation>contains</operation>
        <value>BCB</value>
    </filters>
    <label>All</label>
</ListView>